k8s/apps/base/scrapy-job-api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jobs
  labels:
    istio-injection: enabled
    pod-security.kubernetes.io/enforce: privileged
