k8s/apps/base/scrapy-job-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrapy-job-api
  namespace: jobs
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: scrapy-job-api
    spec:
      containers:
        - name: scrapy-job-api
          image: alexshrugged92/scrapy-job-api
  selector:
    matchLabels:
      app: "scrapy-job-api"
