k8s/apps/base/scrapy-job-api/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: scrapy-job-api
    namespace: jobs
spec:
  selector:
    app: scrapy-job-api
  app:     
    type: ClusterIP
    ports:
        - port: 8000
          targetPort: 8000
          protocol: TCP
