k8s/apps/base/scrapy-job-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: jobs
spec:
  ingressClassName: nginx
  rules:
  - host: jobs.scrapeops.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: scrapy-job-api
            port:
              number: 8000
  - host: jobs.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: scrapy-job-api
            port:
              number: 8000
  # tls:
  # - hosts:
  #   - jobs.scrapeops.dev
  #   secretName: jobs-tls
